# uav

./: .gitignore  Cargo.toml  README.md  plan-s20.md
crates/uav-core/: Cargo.toml
crates/uav-core/src/: config.rs  connection.rs  gamepad.rs  heartbeat.rs  lib.rs  telemetry_handler.rs
crates/uav-gcs/: Cargo.toml
crates/uav-gcs/src/: app.rs  main.rs
crates/uav-gcs/src/panels/: attitude_indicator.rs  companion_panel.rs  detection_overlay.rs  map_view.rs  mod.rs  status_bar.rs  telemetry_panel.rs  video_view.rs
crates/uav-protocol/: Cargo.toml
crates/uav-protocol/src/: companion.rs  lib.rs  messages.rs  telemetry.rs  types.rs
crates/uav-video/: Cargo.toml
crates/uav-video/src/: lib.rs  receiver.rs
