[package]
name = "uav-gcs"
description = "Ground Control Station GUI for UAV"
version.workspace = true
edition.workspace = true

[[bin]]
name = "uav-gcs"
path = "src/main.rs"

[dependencies]
uav-protocol = { workspace = true }
uav-core = { workspace = true }
uav-video = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
walkers = "0.52.0"
